# fortiedr-mcp-server

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  fortiedr_api.postman_collection.json  pyproject.toml
docs/: api-reference.md  mssp-guide.md
examples/: claude-code.json  claude-desktop-config.json  vscode-mcp.json
src/fortiedr_mcp/: __init__.py  auth.py  client.py  config.py  server.py
src/fortiedr_mcp/tools/: __init__.py
src/fortiedr_mcp/tools/_generated/: __init__.py  api_admin.py  api_application_control.py  api_av_scanner_file_controller.py  api_dashboard.py  api_reputation.py  mgmt_admin.py  mgmt_audit.py  mgmt_comm_control.py  mgmt_events.py  mgmt_exceptions.py  mgmt_forensics.py  mgmt_hash.py  mgmt_integrations.py  mgmt_inventory.py  mgmt_iot.py  mgmt_ip_sets.py  mgmt_organizations.py  mgmt_playbooks_policies.py  mgmt_policies.py  mgmt_sendable_entities.py  mgmt_system_events.py  mgmt_threat_hunting.py  mgmt_threat_hunting_exclusions.py  mgmt_threat_hunting_settings.py  mgmt_users.py
src/fortiedr_mcp/tools/composite/: __init__.py  mssp.py  reporting.py
src/fortiedr_mcp/tools/curated/: __init__.py  dashboard.py  events.py  inventory.py  threat_hunting.py
tests/: test_client.py  test_config.py
tools/: gen_api_reference.py  gen_tools.py  postman_parser.py
